--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -20,7 +20,7 @@ en:
       next: 'Next &raquo;'
 
   blacklight:
-    application_name: 'Princeton University Library Store'
+    application_name: 'Library Storage'
 
     header_links:
       login: 'Login'
